[package]
name = "registry-grabber"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
valence_nbt = { git = "https://github.com/valence-rs/valence", version = "0.8.0", features = ["serde"] }
valence_protocol = { git = "https://github.com/valence-rs/valence", version = "0.2.0-alpha.1" }

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
